--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -14,8 +14,39 @@ en:
         title: "Certified Merchants"
         website: "Website"
         discourse_user: "Forum Profile"
+        guide_desc: "Learn about the certified merchant program and how to apply"
+        guide_btn: "Learn More"
       oauth_apps:
         title: "OAuth2 Application Management"
         create: "Create New App"
         delete: "Delete"
         reset_secret: "Reset Secret"
+        guide_title: "Integration Guide"
+        guide_desc: "Learn how to integrate OAuth 2.0 and OpenID Connect authentication into your application"
+        guide_btn: "View Docs"
+      billing:
+        title: "Billing"
+        subscriptions: "Subscriptions"
+        status: "Status"
+        status_none: "No active subscription"
+        status_active: "Active"
+        status_trialing: "Trial"
+        status_canceled: "Canceled (active until expiry)"
+        status_paused: "Paused"
+        status_expired: "Expired"
+        status_refunded: "Refunded"
+        subscribe: "Subscribe Now"
+        subscribe_desc: "Subscribe to VIP membership to unlock premium features."
+        manage: "Manage Subscription"
+        cancel: "Cancel Subscription"
+        cancel_confirm: "Are you sure you want to cancel? Your subscription will remain active until the end of the current billing period."
+        period_end: "Active until"
+        loading: "Loading..."
+        error: "Failed to load subscription info"
+        checkout_error: "Failed to create checkout session"
+        cancel_error: "Failed to cancel subscription"
+        cancel_success: "Subscription canceled. It will remain active until the end of the current billing period."
+        portal_error: "Failed to open billing portal"
+        guide_title: "VIP Membership Info"
+        guide_desc: "Please read the VIP membership benefits and terms of service before subscribing."
+        guide_btn: "Learn More"
