--- a/config/locales/client.zh_CN.yml
+++ b/config/locales/client.zh_CN.yml
@@ -14,8 +14,39 @@ zh_CN:
         title: "认证商家"
         website: "官网"
         discourse_user: "论坛主页"
+        guide_desc: "了解认证商家计划和申请流程"
+        guide_btn: "了解详情"
       oauth_apps:
         title: "OAuth2 应用管理"
         create: "创建新应用"
         delete: "删除"
         reset_secret: "重置密钥"
+        guide_title: "对接指南"
+        guide_desc: "了解如何将 OAuth 2.0 和 OpenID Connect 身份验证集成到您的应用中"
+        guide_btn: "查看文档"
+      billing:
+        title: "账单"
+        subscriptions: "订阅管理"
+        status: "状态"
+        status_none: "暂无订阅"
+        status_active: "生效中"
+        status_trialing: "试用中"
+        status_canceled: "已取消（到期前仍有效）"
+        status_paused: "已暂停"
+        status_expired: "已过期"
+        status_refunded: "已退款"
+        subscribe: "立即订阅"
+        subscribe_desc: "订阅 VIP 会员，解锁高级功能。"
+        manage: "管理订阅"
+        cancel: "取消订阅"
+        cancel_confirm: "确定要取消订阅吗？取消后，订阅将在当前计费周期结束前保持有效。"
+        period_end: "有效期至"
+        loading: "加载中..."
+        error: "无法加载订阅信息"
+        checkout_error: "创建支付会话失败"
+        cancel_error: "取消订阅失败"
+        cancel_success: "订阅已取消，将在当前计费周期结束前保持有效。"
+        portal_error: "无法打开账单管理页面"
+        guide_title: "VIP 会员说明"
+        guide_desc: "订阅前请仔细阅读 VIP 会员权益和服务条款，了解您将获得的功能和退款政策。"
+        guide_btn: "查看详情"
