--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -3,3 +3,9 @@ en:
     sparkloc_enabled: "Enable Sparkloc plugin (OAuth2 proxy, upgrade progress, certified merchants, app management)"
     sparkloc_backend_url: "Rust backend URL (default https://auth.sparkloc.com)"
     sparkloc_internal_api_key: "Internal API Key (for plugin-to-Rust backend communication)"
+    sparkloc_creem_enabled: "Enable Creem.io subscription payments"
+    sparkloc_creem_api_key: "Creem API Key"
+    sparkloc_creem_webhook_secret: "Creem Webhook signing secret"
+    sparkloc_creem_product_id: "Creem Product ID for VIP subscription"
+    sparkloc_creem_group_name: "Discourse group name to add subscribers to"
+    sparkloc_creem_test_mode: "Use Creem test environment (test-api.creem.io)"
