--- a/config/locales/server.zh_CN.yml
+++ b/config/locales/server.zh_CN.yml
@@ -3,3 +3,9 @@ zh_CN:
     sparkloc_enabled: "启用 Sparkloc 插件（OAuth2 代理、升级进度、认证商家、应用管理）"
     sparkloc_backend_url: "Rust 后端地址（默认 https://auth.sparkloc.com）"
     sparkloc_internal_api_key: "内部 API Key（用于插件与 Rust 后端通信）"
+    sparkloc_creem_enabled: "启用 Creem.io 订阅支付"
+    sparkloc_creem_api_key: "Creem API Key"
+    sparkloc_creem_webhook_secret: "Creem Webhook 签名密钥"
+    sparkloc_creem_product_id: "Creem VIP 订阅产品 ID"
+    sparkloc_creem_group_name: "订阅用户加入的 Discourse 群组名称"
+    sparkloc_creem_test_mode: "使用 Creem 测试环境 (test-api.creem.io)"
