--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -43,6 +43,8 @@ en:
         manage: "Manage Subscription"
         cancel: "Cancel Subscription"
         cancel_confirm: "Are you sure you want to cancel? Your subscription will remain active until the end of the current billing period."
+        cancel_confirm_yes: "Yes, Cancel"
+        cancel_confirm_no: "Keep Subscription"
         period_end: "Active until"
         loading: "Loading..."
         error: "Failed to load subscription info"
