--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -27,6 +27,21 @@ en:
         guide_title: "Integration Guide"
         guide_desc: "Learn how to integrate OAuth 2.0 and OpenID Connect authentication into your application"
         guide_btn: "View Docs"
+      deeplx:
+        title: "Translation API"
+        desc: "Use your API Key to access the Sparkloc translation service. Request format:"
+        endpoint_example: "POST https://deeplx.sparkloc.org/{your_key}/translate"
+        no_key: "You haven't initialized an API Key yet"
+        init: "Initialize"
+        reset: "Reset Key"
+        reset_confirm: "Are you sure? The old key will be invalidated immediately."
+        status_active: "Active"
+        status_banned: "Banned"
+        banned_notice: "Your API Key has been banned. Contact an admin if you have questions."
+        usage_3h: "Usage (last 3h)"
+        init_success: "API Key generated"
+        reset_success: "API Key has been reset"
+        error: "Operation failed"
       billing:
         title: "Billing"
         subscriptions: "Subscriptions"
