--- a/config/locales/client.zh_CN.yml
+++ b/config/locales/client.zh_CN.yml
@@ -27,6 +27,21 @@ zh_CN:
         guide_title: "对接指南"
         guide_desc: "了解如何将 OAuth 2.0 和 OpenID Connect 身份验证集成到您的应用中"
         guide_btn: "查看文档"
+      deeplx:
+        title: "翻译 API"
+        desc: "使用 API Key 调用 Sparkloc 翻译服务，请求格式："
+        endpoint_example: "POST https://deeplx.sparkloc.org/{your_key}/translate"
+        no_key: "您还没有初始化 API Key"
+        init: "初始化"
+        reset: "重置密钥"
+        reset_confirm: "确定重置密钥？旧密钥将立即失效。"
+        status_active: "正常"
+        status_banned: "已封禁"
+        banned_notice: "您的 API Key 已被封禁，无法使用翻译服务。如有疑问请联系管理员。"
+        usage_3h: "近 3 小时用量"
+        init_success: "API Key 已生成"
+        reset_success: "API Key 已重置"
+        error: "操作失败"
       billing:
         title: "账单"
         subscriptions: "订阅管理"
